[package]
name = "m4a-format"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.4"
lazy_static = "1.4"
# Using standard process command to invoke ffmpeg
